已完成普通用户登录——任务模块的4条用例书写

--- a/Ranzhi/test-output/index.html
+++ b/Ranzhi/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Windows\Temp\testng-eclipse--2075553836\testng-customsuite.xml</span>
+                    <span>C:\Windows\Temp\testng-eclipse--365541301\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,37 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.login.LoginTest" hash-for-method="LoginFail">LoginFail</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickNamebutton1">clickNamebutton1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.login.LoginTest" hash-for-method="LoginSuccess">LoginSuccess</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickNamebutton2">clickNamebutton2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickPbutton1">clickPbutton1</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickPbutton2">clickPbutton2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickbianhaobutton1">clickbianhaobutton1</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickbianhaobutton2">clickbianhaobutton2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickworkbutton">clickworkbutton</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +150,56 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.user.login.LoginTest</span>
+              <span class="class-name">com.user.work.WorkingTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginFail">
-                  </a> <!-- LoginFail -->
-                  <span class="method-name">LoginFail</span>
+                  <a name="clickNamebutton1">
+                  </a> <!-- clickNamebutton1 -->
+                  <span class="method-name">clickNamebutton1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginSuccess">
-                  </a> <!-- LoginSuccess -->
-                  <span class="method-name">LoginSuccess</span>
+                  <a name="clickNamebutton2">
+                  </a> <!-- clickNamebutton2 -->
+                  <span class="method-name">clickNamebutton2</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickPbutton1">
+                  </a> <!-- clickPbutton1 -->
+                  <span class="method-name">clickPbutton1</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickPbutton2">
+                  </a> <!-- clickPbutton2 -->
+                  <span class="method-name">clickPbutton2</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickbianhaobutton1">
+                  </a> <!-- clickbianhaobutton1 -->
+                  <span class="method-name">clickbianhaobutton1</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickbianhaobutton2">
+                  </a> <!-- clickbianhaobutton2 -->
+                  <span class="method-name">clickbianhaobutton2</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="clickworkbutton">
+                  </a> <!-- clickworkbutton -->
+                  <span class="method-name">clickworkbutton</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +207,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Windows\Temp\testng-eclipse--2075553836\testng-customsuite.xml</span>
+            <span class="header-content">C:\Windows\Temp\testng-eclipse--365541301\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +216,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.user.login.LoginTest&quot;/&gt;
+      &lt;class name=&quot;com.user.work.WorkingTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +256,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginFail')
-data.setCell(0, 2, 'com.user.login.LoginTest')
-data.setCell(0, 3, 5752);
+data.setCell(0, 1, 'clickPbutton1')
+data.setCell(0, 2, 'com.user.work.WorkingTest')
+data.setCell(0, 3, 6705);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginSuccess')
-data.setCell(1, 2, 'com.user.login.LoginTest')
-data.setCell(1, 3, 5133);
+data.setCell(1, 1, 'clickbianhaobutton2')
+data.setCell(1, 2, 'com.user.work.WorkingTest')
+data.setCell(1, 3, 6644);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'clickPbutton2')
+data.setCell(2, 2, 'com.user.work.WorkingTest')
+data.setCell(2, 3, 6552);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'clickNamebutton1')
+data.setCell(3, 2, 'com.user.work.WorkingTest')
+data.setCell(3, 3, 6546);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'clickbianhaobutton1')
+data.setCell(4, 2, 'com.user.work.WorkingTest')
+data.setCell(4, 3, 6516);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'clickworkbutton')
+data.setCell(5, 2, 'com.user.work.WorkingTest')
+data.setCell(5, 3, 6498);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'clickNamebutton2')
+data.setCell(6, 2, 'com.user.work.WorkingTest')
+data.setCell(6, 3, 6459);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 45 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,22 +315,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.user.login.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.user.work.WorkingTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">doBeforeMethod</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">startUp</span>
-                <span class="method-start">10209 ms</span>
+                <span class="method-start">7801 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">LoginFail</span>
-                <span class="method-start">10225 ms</span>
+                <span class="method-name">clickworkbutton</span>
+                <span class="method-start">16079 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">LoginSuccess</span>
-                <span class="method-start">15979 ms</span>
+                <span class="method-name">clickbianhaobutton1</span>
+                <span class="method-start">22580 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">clickbianhaobutton2</span>
+                <span class="method-start">29099 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">clickPbutton1</span>
+                <span class="method-start">35747 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">clickPbutton2</span>
+                <span class="method-start">42454 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">clickNamebutton1</span>
+                <span class="method-start">49009 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">clickNamebutton2</span>
+                <span class="method-start">55559 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
