--- a/Ranzhi/test-output/old/Default suite/classes.html
+++ b/Ranzhi/test-output/old/Default suite/classes.html
@@ -4,18 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.user.login.LoginTest</td>
+<td>com.user.work.WorkingTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LoginFail</td>
+<td>clickPbutton2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>LoginSuccess</td>
+<td>clickNamebutton2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickNamebutton1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickbianhaobutton1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickbianhaobutton2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickPbutton1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>clickworkbutton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
