--- a/Ranzhi/test-output/index.html
+++ b/Ranzhi/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Windows\Temp\testng-eclipse--365541301\testng-customsuite.xml</span>
+                    <span>C:\Windows\Temp\testng-eclipse-1892130062\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,37 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickNamebutton1">clickNamebutton1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.admin.team.Settings" hash-for-method="clicksettingbutton">clicksettingbutton</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickNamebutton2">clickNamebutton2</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.admin.team.Settings" hash-for-method="clickteambutton">clickteambutton</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickPbutton1">clickPbutton1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.admin.team.Settings" hash-for-method="dataAddBankuai(橘子, 苹果, 桃子)">dataAddBankuai(橘子, 苹果, 桃子)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickPbutton2">clickPbutton2</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickbianhaobutton1">clickbianhaobutton1</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickbianhaobutton2">clickbianhaobutton2</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.user.work.WorkingTest" hash-for-method="clickworkbutton">clickworkbutton</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.admin.team.Settings" hash-for-method="deleteBumen">deleteBumen</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -150,56 +135,36 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.user.work.WorkingTest</span>
+              <span class="class-name">com.admin.team.Settings</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clickNamebutton1">
-                  </a> <!-- clickNamebutton1 -->
-                  <span class="method-name">clickNamebutton1</span>
+                  <a name="clicksettingbutton">
+                  </a> <!-- clicksettingbutton -->
+                  <span class="method-name">clicksettingbutton</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="clickNamebutton2">
-                  </a> <!-- clickNamebutton2 -->
-                  <span class="method-name">clickNamebutton2</span>
+                  <a name="clickteambutton">
+                  </a> <!-- clickteambutton -->
+                  <span class="method-name">clickteambutton</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="clickPbutton1">
-                  </a> <!-- clickPbutton1 -->
-                  <span class="method-name">clickPbutton1</span>
+                  <a name="dataAddBankuai(橘子, 苹果, 桃子)">
+                  </a> <!-- dataAddBankuai(橘子, 苹果, 桃子) -->
+                  <span class="method-name">dataAddBankuai</span>
+                  <span class="parameters">(橘子, 苹果, 桃子)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="clickPbutton2">
-                  </a> <!-- clickPbutton2 -->
-                  <span class="method-name">clickPbutton2</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="clickbianhaobutton1">
-                  </a> <!-- clickbianhaobutton1 -->
-                  <span class="method-name">clickbianhaobutton1</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="clickbianhaobutton2">
-                  </a> <!-- clickbianhaobutton2 -->
-                  <span class="method-name">clickbianhaobutton2</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="clickworkbutton">
-                  </a> <!-- clickworkbutton -->
-                  <span class="method-name">clickworkbutton</span>
+                  <a name="deleteBumen">
+                  </a> <!-- deleteBumen -->
+                  <span class="method-name">deleteBumen</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -207,7 +172,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Windows\Temp\testng-eclipse--365541301\testng-customsuite.xml</span>
+            <span class="header-content">C:\Windows\Temp\testng-eclipse-1892130062\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -216,7 +181,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.user.work.WorkingTest&quot;/&gt;
+      &lt;class name=&quot;com.admin.team.Settings&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -256,40 +221,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clickPbutton1')
-data.setCell(0, 2, 'com.user.work.WorkingTest')
-data.setCell(0, 3, 6705);
+data.setCell(0, 1, 'clicksettingbutton')
+data.setCell(0, 2, 'com.admin.team.Settings')
+data.setCell(0, 3, 6405);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'clickbianhaobutton2')
-data.setCell(1, 2, 'com.user.work.WorkingTest')
-data.setCell(1, 3, 6644);
+data.setCell(1, 1, 'clickteambutton')
+data.setCell(1, 2, 'com.admin.team.Settings')
+data.setCell(1, 3, 3489);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'clickPbutton2')
-data.setCell(2, 2, 'com.user.work.WorkingTest')
-data.setCell(2, 3, 6552);
+data.setCell(2, 1, 'dataAddBankuai')
+data.setCell(2, 2, 'com.admin.team.Settings')
+data.setCell(2, 3, 3279);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'clickNamebutton1')
-data.setCell(3, 2, 'com.user.work.WorkingTest')
-data.setCell(3, 3, 6546);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'clickbianhaobutton1')
-data.setCell(4, 2, 'com.user.work.WorkingTest')
-data.setCell(4, 3, 6516);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'clickworkbutton')
-data.setCell(5, 2, 'com.user.work.WorkingTest')
-data.setCell(5, 3, 6498);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'clickNamebutton2')
-data.setCell(6, 2, 'com.user.work.WorkingTest')
-data.setCell(6, 3, 6459);
+data.setCell(3, 1, 'deleteBumen')
+data.setCell(3, 2, 'com.admin.team.Settings')
+data.setCell(3, 3, 3099);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -315,42 +268,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.user.work.WorkingTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.admin.team.Settings</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">doBeforeMethod</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">startUp</span>
-                <span class="method-start">7801 ms</span>
+                <span class="method-start">7689 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">clickworkbutton</span>
-                <span class="method-start">16079 ms</span>
+                <span class="method-name">clickteambutton</span>
+                <span class="method-start">14800 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">clickbianhaobutton1</span>
-                <span class="method-start">22580 ms</span>
+                <span class="method-name">deleteBumen</span>
+                <span class="method-start">18289 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">clickbianhaobutton2</span>
-                <span class="method-start">29099 ms</span>
+                <span class="method-name">clicksettingbutton</span>
+                <span class="method-start">21388 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">clickPbutton1</span>
-                <span class="method-start">35747 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">clickPbutton2</span>
-                <span class="method-start">42454 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">clickNamebutton1</span>
-                <span class="method-start">49009 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">clickNamebutton2</span>
-                <span class="method-start">55559 ms</span>
+                <span class="method-name">dataAddBankuai(橘子, 苹果, 桃子)</span>
+                <span class="method-start">27815 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
