--- a/Ranzhi/test-output/old/Default suite/classes.html
+++ b/Ranzhi/test-output/old/Default suite/classes.html
@@ -4,38 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.user.work.WorkingTest</td>
+<td>com.admin.team.Settings</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickPbutton2</td>
+<td>deleteBumen</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickNamebutton2</td>
+<td>clickteambutton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickNamebutton1</td>
+<td>dataAddBankuai</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickbianhaobutton1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>clickbianhaobutton2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>clickPbutton1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>clickworkbutton</td>
+<td>clicksettingbutton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
