--- a/Ranzhi/test-output/old/Default suite/methods-alphabetical.html
+++ b/Ranzhi/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61f5df">  <td>17/11/21 11:09:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WorkingTest.clickNamebutton1()[pri:5, instance:com.user.work.WorkingTest@457e2f02]">clickNamebutton1</td> 
-  <td>main@87765719</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>17/11/21 11:09:48</td>   <td>6550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WorkingTest.clickNamebutton2()[pri:6, instance:com.user.work.WorkingTest@457e2f02]">clickNamebutton2</td> 
-  <td>main@87765719</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>17/11/21 11:09:29</td>   <td>-13262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WorkingTest.clickPbutton1()[pri:3, instance:com.user.work.WorkingTest@457e2f02]">clickPbutton1</td> 
-  <td>main@87765719</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>17/11/21 11:09:35</td>   <td>-6555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WorkingTest.clickPbutton2()[pri:4, instance:com.user.work.WorkingTest@457e2f02]">clickPbutton2</td> 
-  <td>main@87765719</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>17/11/21 11:09:15</td>   <td>-26429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WorkingTest.clickbianhaobutton1()[pri:1, instance:com.user.work.WorkingTest@457e2f02]">clickbianhaobutton1</td> 
-  <td>main@87765719</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>17/11/21 11:09:22</td>   <td>-19910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WorkingTest.clickbianhaobutton2()[pri:2, instance:com.user.work.WorkingTest@457e2f02]">clickbianhaobutton2</td> 
-  <td>main@87765719</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>17/11/21 11:09:09</td>   <td>-32930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WorkingTest.clickworkbutton()[pri:0, instance:com.user.work.WorkingTest@457e2f02]">clickworkbutton</td> 
-  <td>main@87765719</td>   <td></td> </tr>
-<tr bgcolor="b66870">  <td>17/11/21 11:08:53</td>   <td>-49004</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeMethod()[pri:0, instance:com.user.work.WorkingTest@457e2f02]">&gt;&gt;doBeforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@87765719</td>   <td></td> </tr>
-<tr bgcolor="61f5df">  <td>17/11/21 11:09:01</td>   <td>-41208</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WorkingTest.startUp()[pri:0, instance:com.user.work.WorkingTest@457e2f02]">&gt;&gt;startUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@87765719</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>17/11/24 08:15:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Settings.clicksettingbutton()[pri:1, instance:com.admin.team.Settings@6767c1fc]">clicksettingbutton</td> 
+  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>17/11/24 08:15:26</td>   <td>-6588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Settings.clickteambutton()[pri:0, instance:com.admin.team.Settings@6767c1fc]">clickteambutton</td> 
+  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>17/11/24 08:15:39</td>   <td>6427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Settings.dataAddBankuai(java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.admin.team.Settings@6767c1fc]">dataAddBankuai</td> 
+  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>17/11/24 08:15:29</td>   <td>-3099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Settings.deleteBumen()[pri:0, instance:com.admin.team.Settings@6767c1fc]">deleteBumen</td> 
+  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/11/24 08:15:11</td>   <td>-21388</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeMethod()[pri:0, instance:com.admin.team.Settings@6767c1fc]">&gt;&gt;doBeforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>17/11/24 08:15:19</td>   <td>-13699</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Settings.startUp()[pri:0, instance:com.admin.team.Settings@6767c1fc]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125622176</td>   <td></td> </tr>
 </table>
