--- a/Ranzhi/test-output/old/Default suite/methods.html
+++ b/Ranzhi/test-output/old/Default suite/methods.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d6578">  <td>17/11/24 08:15:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeMethod()[pri:0, instance:com.admin.team.Settings@6767c1fc]">&gt;&gt;doBeforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125622176</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>17/11/24 08:15:19</td>   <td>7689</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Settings.startUp()[pri:0, instance:com.admin.team.Settings@6767c1fc]">&gt;&gt;startUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125622176</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>17/11/24 08:15:26</td>   <td>14800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Settings.clickteambutton()[pri:0, instance:com.admin.team.Settings@6767c1fc]">clickteambutton</td> 
-  <td>main@125622176</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>17/11/24 08:15:29</td>   <td>18289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Settings.deleteBumen()[pri:0, instance:com.admin.team.Settings@6767c1fc]">deleteBumen</td> 
-  <td>main@125622176</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>17/11/24 08:15:32</td>   <td>21388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Settings.clicksettingbutton()[pri:1, instance:com.admin.team.Settings@6767c1fc]">clicksettingbutton</td> 
-  <td>main@125622176</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>17/11/24 08:15:39</td>   <td>27815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Settings.dataAddBankuai(java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.admin.team.Settings@6767c1fc]">dataAddBankuai</td> 
-  <td>main@125622176</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>17/11/30 17:17:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeMethod()[pri:0, instance:com.admin.team.SettingsBumen@29ee9faa]">&gt;&gt;doBeforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:18</td>   <td>6488</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SettingsBumen.startUp()[pri:0, instance:com.admin.team.SettingsBumen@29ee9faa]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:25</td>   <td>13787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.clickteambutton()[pri:0, instance:com.admin.team.SettingsBumen@29ee9faa]">clickteambutton</td> 
+  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:29</td>   <td>17279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.clicksettingbutton()[pri:1, instance:com.admin.team.SettingsBumen@29ee9faa]">clicksettingbutton</td> 
+  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:35</td>   <td>23810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.clickBumen()[pri:2, instance:com.admin.team.SettingsBumen@29ee9faa]">clickBumen</td> 
+  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:45</td>   <td>33559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.BianjiBumen()[pri:3, instance:com.admin.team.SettingsBumen@29ee9faa]">BianjiBumen</td> 
+  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>17/11/30 17:18:05</td>   <td>53128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.BianjiBumen1()[pri:4, instance:com.admin.team.SettingsBumen@29ee9faa]">BianjiBumen1</td> 
+  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>17/11/30 17:18:08</td>   <td>56290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.ZiBumen(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:5, instance:com.admin.team.SettingsBumen@29ee9faa]">ZiBumen</td> 
+  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="9f9fb0">  <td>17/11/30 17:18:18</td>   <td>66314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.DeleteBumen()[pri:6, instance:com.admin.team.SettingsBumen@29ee9faa]">DeleteBumen</td> 
+  <td>main@542060780</td>   <td></td> </tr>
 </table>
