--- a/Ranzhi/test-output/old/Default suite/methods-alphabetical.html
+++ b/Ranzhi/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.BianjiBumen()[pri:3, instance:com.admin.team.SettingsBumen@29ee9faa]">BianjiBumen</td> 
-  <td>main@542060780</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>17/11/30 17:18:05</td>   <td>19569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.BianjiBumen1()[pri:4, instance:com.admin.team.SettingsBumen@29ee9faa]">BianjiBumen1</td> 
-  <td>main@542060780</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>17/11/30 17:18:18</td>   <td>32755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.DeleteBumen()[pri:6, instance:com.admin.team.SettingsBumen@29ee9faa]">DeleteBumen</td> 
-  <td>main@542060780</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>17/11/30 17:18:08</td>   <td>22731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.ZiBumen(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:5, instance:com.admin.team.SettingsBumen@29ee9faa]">ZiBumen</td> 
-  <td>main@542060780</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:35</td>   <td>-9749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.clickBumen()[pri:2, instance:com.admin.team.SettingsBumen@29ee9faa]">clickBumen</td> 
-  <td>main@542060780</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:29</td>   <td>-16280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.clicksettingbutton()[pri:1, instance:com.admin.team.SettingsBumen@29ee9faa]">clicksettingbutton</td> 
-  <td>main@542060780</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:25</td>   <td>-19772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsBumen.clickteambutton()[pri:0, instance:com.admin.team.SettingsBumen@29ee9faa]">clickteambutton</td> 
-  <td>main@542060780</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>17/11/30 17:17:11</td>   <td>-33559</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeMethod()[pri:0, instance:com.admin.team.SettingsBumen@29ee9faa]">&gt;&gt;doBeforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542060780</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>17/11/30 17:17:18</td>   <td>-27071</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SettingsBumen.startUp()[pri:0, instance:com.admin.team.SettingsBumen@29ee9faa]">&gt;&gt;startUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@542060780</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>17/12/08 11:06:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsRole.addRole()[pri:1, instance:com.admin.team.SettingsRole@55f3ddb1]">addRole</td> 
+  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>17/12/08 11:06:28</td>   <td>-20709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsRole.before()[pri:0, instance:com.admin.team.SettingsRole@55f3ddb1]">before</td> 
+  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="f8966d">  <td>17/12/08 11:06:13</td>   <td>-36205</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeMethod()[pri:0, instance:com.admin.team.SettingsRole@55f3ddb1]">&gt;&gt;doBeforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>17/12/08 11:06:21</td>   <td>-28222</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SettingsRole.startUp()[pri:0, instance:com.admin.team.SettingsRole@55f3ddb1]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1308244637</td>   <td></td> </tr>
 </table>
