新添加了2条数据驱动的测试用例

--- a/Ranzhi/test-output/old/Default suite/methods.html
+++ b/Ranzhi/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6e8abd">  <td>17/12/13 11:02:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeMethod()[pri:0, instance:com.admin.login.LoginTest@3ffc5af1]">&gt;&gt;doBeforeMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="a485d2">  <td>17/12/13 11:02:11</td>   <td>7873</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.startUp()[pri:0, instance:com.admin.login.LoginTest@3ffc5af1]">&gt;&gt;startUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="a485d2">  <td>17/12/13 11:02:11</td>   <td>7904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginFail()[pri:0, instance:com.admin.login.LoginTest@3ffc5af1]">LoginFail</td> 
-  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>17/12/13 11:02:19</td>   <td>15464</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.doAfterMethod()[pri:0, instance:com.admin.login.LoginTest@3ffc5af1]">&lt;&lt;doAfterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>17/12/15 08:42:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeMethod()[pri:0, instance:com.admin.team.Boke@14acaea5]">&gt;&gt;doBeforeMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>17/12/15 08:42:37</td>   <td>7351</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Boke.startUp()[pri:0, instance:com.admin.team.Boke@14acaea5]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>17/12/15 08:42:44</td>   <td>14235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Boke.beforeBoke()[pri:0, instance:com.admin.team.Boke@14acaea5]">beforeBoke</td> 
+  <td>main@239465106</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>17/12/15 08:42:54</td>   <td>24088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Boke.AddBoke(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.admin.team.Boke@14acaea5]">AddBoke</td> 
+  <td>main@239465106</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>17/12/15 08:43:21</td>   <td>51406</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.doAfterMethod()[pri:0, instance:com.admin.team.Boke@14acaea5]">&lt;&lt;doAfterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
 </table>
