--- a/Ranzhi/test-output/old/Default suite/methods-not-run.html
+++ b/Ranzhi/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.admin.team.Boke.FindBoke</td></tr>
+<tr><td>com.admin.team.Boke.Check</td></tr>
 </table>
